<resources>
    <string name="app_name">M-Bank</string>
    <string name="title_activity_main">MainActivity</string>
    <string name="title_home">Home</string>
    <string name="title_dashboard">Dashboard</string>
    <string name="title_notifications">Notifications</string>
    <string name="select_color">Select wallet color:</string>
    <string name="title_activity_sign_in">SignInActivity</string>
    <string name="title_activity_main2">Main2Activity</string>
    <string name="sign_in">Sign in</string>
    <string name="password">Password</string>
    <string name="sign_up">Sign up</string>
    <string name="forgot">Forgot?</string>
    <string name="restore_hint">Enter email address used to sign up</string>
    <string name="cancel">Cancel</string>
    <string name="sign_up_to_continue">Sign up to continue</string>
    <string name="sign_in_to_continue">Sign in to continue</string>
    <string name="name_subtitle">Monopoly online bank</string>
    <string name="already_have_account">Already have account</string>
    <string name="create_new_account">Create new account</string>
    <string name="loading">Loading...</string>
    <string name="title_activity_create_wallet">CreateWalletActivity</string>
    <string name="title_activity_account_settings">Account Settings</string>

    <!-- Strings related to Settings -->

    <!-- Example General settings -->
    <string name="pref_header_general">General</string>

    <string name="pref_title_social_recommendations">Enable social recommendations</string>
    <string name="pref_description_social_recommendations">Recommendations for people to contact
        based on your message history
    </string>

    <string name="pref_title_display_name">Display name</string>
    <string name="pref_default_display_name">John Smith</string>

    <string name="pref_title_add_friends_to_messages">Add friends to messages</string>
    <string-array name="pref_example_list_titles">
        <item>Always</item>
        <item>When possible</item>
        <item>Never</item>
    </string-array>
    <string-array name="pref_example_list_values">
        <item>1</item>
        <item>0</item>
        <item>-1</item>
    </string-array>

    <!-- Example settings for Data & Sync -->
    <string name="pref_header_data_sync">Data &amp; sync</string>

    <string name="pref_title_sync_frequency">Sync frequency</string>
    <string-array name="pref_sync_frequency_titles">
        <item>15 minutes</item>
        <item>30 minutes</item>
        <item>1 hour</item>
        <item>3 hours</item>
        <item>6 hours</item>
        <item>Never</item>
    </string-array>
    <string-array name="pref_sync_frequency_values">
        <item>15</item>
        <item>30</item>
        <item>60</item>
        <item>180</item>
        <item>360</item>
        <item>-1</item>
    </string-array>

    <string-array name="list_preference_entries">
        <item>Entry 1</item>
        <item>Entry 2</item>
        <item>Entry 3</item>
    </string-array>

    <string-array name="list_preference_entry_values">
        <item>1</item>
        <item>2</item>
        <item>3</item>
    </string-array>

    <string-array name="multi_select_list_preference_default_value" />

    <string name="pref_title_system_sync_settings">System sync settings</string>

    <!-- Example settings for Notifications -->
    <string name="pref_header_notifications">Notifications</string>

    <string name="pref_title_new_message_notifications">New message notifications</string>

    <string name="pref_title_ringtone">Ringtone</string>
    <string name="pref_ringtone_silent">Silent</string>

    <string name="pref_title_vibrate">Vibrate</string>
    <string name="email">Email</string>
    <string name="change_password">Change password</string>
    <string name="start_balance">Start balance</string>
    <string name="show_opponents_balance">Show opponents balance</string>
    <string name="income_tax_cost">Income tax cost</string>
    <string name="go_cost">GO cost</string>
    <string name="lobby_name">Lobby name</string>
    <string name="luxury_tax_cost">Luxury tax cost</string>
    <string name="create_lobby">Create lobby</string>
    <string name="specify_some_game_settings_to_simplify_game_management">Specify some game settings to simplify game management</string>
    <string name="wallet_name">Wallet name</string>
    <string name="don_t_forget_to_name_your_own_wallet">Don\'t forget to name your own wallet</string>
    <string name="invite_code">Invite code</string>
    <string name="title_activity_bottom_sheet_test">BottomSheetTest</string>
</resources>
